--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,14 +1,14 @@
 {
   "extends": [
-    "stylelint-config-standard",
-  ],
-  "plugins": [
-    "stylelint-order",
-    "stylelint-scss"
+    "stylelint-config-standard"
   ],
   "ignoreFiles": [
     "**/*.ts",
     "**/*.tsx"
+  ],
+  "plugins": [
+    "stylelint-order",
+    "stylelint-scss"
   ],
   "rules": {
     "scss/dollar-variable-empty-line-before": [
