--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "build": "webpack --config ./build/webpack.build.conf.js",
     "deploy": "gh-pages -d dist",
     "style": "npx stylelint \"**/*.scss\"",
-    "preprod": "node ./build/webpack.config.prod.js",
-    "prod": "npm webpack"
+    "clean-source": "rimraf README.md src webroot package.json"
   },
+  "gh-pages-deploy": {
+  "staticpath": "dist",
+
+
+  "post": [
+    "clean-source"
+  ],
+  "noprompt": false
+},
   "browserslist": [
     "> 1%",
     "last 3 version"
@@ -57,6 +65,5 @@
     "material-icons": "^0.3.1",
     "npm": "^6.14.1",
     "stylelint-config-sass-guidelines": "^7.0.0"
-
   }
 }
