--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "item-quantity-dropdown": "^2.1.0",
+    "jquery": "^3.4.1",
     "material-icons": "^0.3.1",
     "npm": "^6.14.1",
     "stylelint-config-sass-guidelines": "^7.0.0"
