--- a/package.json
+++ b/package.json
@@ -17,47 +17,49 @@
   "author": "Tanja Voronina",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "file-loader": "^4.3.0",
+    "file-loader": "^6.0.0",
     "gh-pages": "^2.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.8.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "prettier-webpack-plugin": "^1.2.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^1.0.0",
-    "stylelint-scss": "^3.3.2",
-    "url-loader": "^3.0.0",
+    "style-loader": "^1.1.4",
+    "stylelint": "^13.3.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.17.0",
+    "url-loader": "^4.1.0",
     "webp-loader": "^0.6.0",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-material-design-icons": "^0.1.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "funding": "^1.0.9",
     "item-quantity-dropdown": "^2.1.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "material-icons": "^0.3.1",
-    "npm": "^6.14.1",
+    "moment": "^2.24.0",
+    "npm": "^6.14.4",
     "stylelint-config-sass-guidelines": "^7.0.0"
   }
 }
